--- a/templates/articles.html
+++ b/templates/articles.html
@@ -5,6 +5,39 @@
     <h1 class="display-4">ARTICLES PAGE</h1>
     <p class="lead">This Application is build using by python and Flask Framework</p>
     <hr class="my-4">
+    <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">id</th>
+            <th scope="col">title</th>
+            <th scope="col">descriptrion</th>
+            <th scope="col">author</th>
+            <th scope="col">DATE</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for a in [1,2,3,4,5] %}
+          <tr>
+            <th scope="row">{{ a }}</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     <a class="btn btn-warning btn-lg" href="#" role="button">Learn more</a>
 
 {% endblock %}
