--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,7 +1,6 @@
 {% extends "layouts.html" %}
-
 {% block body %}
-<div class="jumbotron">
+    <div class="jumbotron text-center">
     <h1 class="display-4">ARTICLES PAGE</h1>
     <p class="lead">This Application is build using by python and Flask Framework</p>
     <hr class="my-4">
@@ -10,34 +9,26 @@
           <tr>
             <th scope="col">id</th>
             <th scope="col">title</th>
-            <th scope="col">descriptrion</th>
+            <th scope="col">description</th>
             <th scope="col">author</th>
             <th scope="col">DATE</th>
+            <th scope="col">EDIT</th>
           </tr>
         </thead>
         <tbody>
-            {% for a in [1,2,3,4,5] %}
+            {% for article in articles %}
           <tr>
-            <th scope="row">{{ a }}</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">{{ article['id'] }}</th>
+            <td>{{ article['title'] }}</td>
+            <td>{{ article['body'] }}</td>
+            <td>{{ article['author'] }}</td>
+            <td>{{ article['create_date'] }}</td>
+            <td><button type="button" class="btn btn-danger">Edit</button></td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-          {% endfor %}
+           {% endfor %}
         </tbody>
       </table>
+      
     <a class="btn btn-warning btn-lg" href="#" role="button">Learn more</a>
-
+  </div>
 {% endblock %}
