--- a/templates/articles.html
+++ b/templates/articles.html
@@ -28,6 +28,41 @@
            {% endfor %}
         </tbody>
       </table>
+
+
+      <div class="card mb-4">
+        <div class="card-header">
+            <i class="fas fa-table mr-1"></i>
+            DataTable Example
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>TITLE</th>
+                            <th>DESCTIPTION</th>
+                            <th>AUTHOR</th>
+                            <th>DATE</th>
+                            <th>EDIT</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                    <tbody>
+                        <tr>
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011/04/25</td>
+                            <td>$320,800</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    </div>
+                    </div>
+                    </div>
       
     <a class="btn btn-warning btn-lg" href="#" role="button">Learn more</a>
   </div>
