--- a/templates/articles.html
+++ b/templates/articles.html
@@ -36,7 +36,7 @@
                         {% for article in articles %}
                       <tr>
                         <th scope="row">{{ article[0] }}</th>
-                        <td><a href="/article/{{article['0']}}">{{ article[1] }}</a></td>
+                        <td><a href="/article/{{article[0]}}">{{ article[1] }}</a></td>
                         <td>{{ article[2] }}</td>
                         <td>{{ article[3] }}</td>
                         <td>{{ article[4] }}</td>
